specs/020-map-set-tuples/examples/invalid/set-element-type.ts
let s: Set<int> = new Set<int>();
s.add("x");
